--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+wandb
+scikit-learn
+torch
 transformers
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
